--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     <section id="contact">
       <h2>Contacto</h2>
-      <p>Email: <a href="mailto:tu-email@ejemplo.com">tu-email@ejemplo.com</a> • <a href="https://www.linkedin.com/in/tu-perfil" target="_blank">LinkedIn</a></p>
+      <p>Email: <a href="mailto:tu-email@ejemplo.com">cristianvictorino@gmail.com</a> • <a href="https://www.linkedin.com/in/cristian-victorino-a59200212/" target="_blank">LinkedIn</a></p>
     </section>
   </main>
 
   <footer class="text-center py-4 bg-light">
-    <small>© 2025 Cristian — Hecho con ❤️ • <a href="https://github.com/Crissv4" target="_blank">GitHub</a></small>
+    <small>© 2025 Cristian V. • <a href="https://github.com/Crissv4" target="_blank">GitHub</a></small>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
