Update header title in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header class="hero text-white text-center d-flex align-items-center">
     <div class="container">
       <img src="assets/avatar.jpg" alt="Cristian" class="avatar mb-3">
-      <h1 class="display-5 fw-bold">Hola — soy Cristian</h1>
+      <h1 class="display-5 fw-bold">Bienvenidos a mi Portafolio</h1>
       <p class="lead">Estudiante de Desarrollo de Software • Especialidad .NET • C# • Cert. Foundations en GitHub</p>
       <a href="#projects" class="btn btn-primary btn-lg mt-2">Ver mis proyectos</a>
     </div>
