Update email link to use 'mailto:' protocol

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <section id="contact">
       <h2>Contacto</h2>
-      <p>Email: <a href="cristianvictorino@gmail.com">cristianvictorino@gmail.com</a> • <a href="https://www.linkedin.com/in/cristian-victorino-a59200212/" target="_blank">LinkedIn</a></p>
+      <p>Email: <a href="mailto:cristianvictorino@gmail.com">cristianvictorino@gmail.com</a> • <a href="https://www.linkedin.com/in/cristian-victorino-a59200212/" target="_blank">LinkedIn</a></p>
     </section>
   </main>
 
