--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark shadow-sm">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">Cristian</a>
+      <a class="navbar-brand fw-bold" href="#">Cristian Victorino</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
       </button>
