--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
     </div>
   </nav>
 
-  <header class="hero text-white text-center d-flex align-items-center">
-    <div class="container">
-      <img src="assets/avatar.jpg" alt="Cristian" class="avatar mb-3">
-      <h1 class="display-5 fw-bold">Bienvenidos a mi Portafolio</h1>
-      <p class="lead">Estudiante de Desarrollo de Software • Especialidad .NET • C# • Cert. Foundations en GitHub</p>
-      <a href="#projects" class="btn btn-primary btn-lg mt-2">Ver mis proyectos</a>
+<header class="hero text-white text-center d-flex align-items-center">
+  <div class="container">
+    <!-- Avatar centrado dentro del círculo -->
+    <div class="avatar-wrap">
+      <img src="assets/Avatar.png" alt="Cristian" class="avatar avatar-center mb-3">
     </div>
-  </header>
 
+    <h1 class="display-5 fw-bold">Bienvenidos a mi Portafolio</h1>
+    <p class="lead">Estudiante de Desarrollo de Software • Especialidad .NET • C# • Cert. Foundations en GitHub</p>
+    <a href="#projects" class="btn btn-primary btn-lg mt-2">Ver mis proyectos</a>
+  </div>
+</header>
+  
   <main class="container py-5">
     <section id="about" class="mb-5">
       <h2>Sobre mí</h2>
