Add certifications section with project cards

--- a/index.html
+++ b/index.html
@@ -79,6 +79,44 @@
       </div>
     </section>
 
+
+      </section>
+
+    <section id="certifications" class="mb-5">
+      <h2>Certificaciones</h2>
+      <div class="row g-4">
+        <!-- Card 1 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 shadow-sm">
+            <img src="assets/proj12.png" class="card-img-top" alt="Proyecto 1">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Github Foundations</h5>
+              <p class="card-text small text-muted mb-3">Control de versiones, Git & Github</p>
+              <div class="mt-auto">
+                <a href="https://github.com/Crissv4/proyecto-api" class="btn btn-outline-primary btn-sm" target="_blank">Ver repo</a>
+                <a href="#" class="btn btn-primary btn-sm ms-2">Demo</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card h-100 shadow-sm">
+            <img src="assets/proj2.png" class="card-img-top" alt="Proyecto 2">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">C# Foundational by Microsoft</h5>
+              <p class="card-text small text-muted mb-3">.NET 9 & C#</p>
+              <div class="mt-auto">
+                <a href="https://github.com/Crissv4/student-record" class="btn btn-outline-primary btn-sm" target="_blank">Ver repo</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
     <section id="contact">
       <h2>Contacto</h2>
       <p>Email: <a href="mailto:cristianvictorino@gmail.com">cristianvictorino@gmail.com</a> • <a href="https://www.linkedin.com/in/cristian-victorino-a59200212/" target="_blank">LinkedIn</a></p>
