--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <!-- Card 1 -->
         <div class="col-md-6 col-lg-4">
           <div class="card h-100 shadow-sm">
-            <img src="assets/proj1.png" class="card-img-top" alt="Proyecto 1">
+            <img src="assets/proj12.png" class="card-img-top" alt="Proyecto 1">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title">API REST con ASP.NET Core</h5>
-              <p class="card-text small text-muted mb-3">API CRUD con EF Core, SQLite y pruebas unitarias.</p>
+              <h5 class="card-title">Github Foundations</h5>
+              <p class="card-text small text-muted mb-3">Control de versiones, Git & Github.</p>
               <div class="mt-auto">
                 <a href="https://github.com/Crissv4/proyecto-api" class="btn btn-outline-primary btn-sm" target="_blank">Ver repo</a>
                 <a href="#" class="btn btn-primary btn-sm ms-2">Demo</a>
@@ -68,7 +68,7 @@
             <img src="assets/proj2.png" class="card-img-top" alt="Proyecto 2">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">App consola - Gestor de registros</h5>
-              <p class="card-text small text-muted mb-3">Aplicación CLI en C# con persistencia SQLite y pruebas.</p>
+              <p class="card-text small text-muted mb-3">Control de versiones, Git & Github</p>
               <div class="mt-auto">
                 <a href="https://github.com/Crissv4/student-record" class="btn btn-outline-primary btn-sm" target="_blank">Ver repo</a>
               </div>
