--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <img src="assets/Avatar.png" alt="Cristian" class="avatar avatar-center mb-3">
     </div>
 
-    <h1 class="display-5 fw-bold">Bienvenidos a mi Portafolio</h1>
+    <h1 class="display-5 fw-bold">Bienvenidos a mi Portafolio (En edición)</h1>
     <p class="lead">Estudiante de Desarrollo de Software • Especialidad .NET • C# • Cert. Foundations en GitHub</p>
     <a href="#projects" class="btn btn-primary btn-lg mt-2">Ver mis proyectos</a>
   </div>
